# py-transmuter

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  setup.py
py_transmuter/: __init__.py
py_transmuter/dictionaries/: __init__.py
py_transmuter/dictionary_mapping/: __init__.py  aggregator.py  mapper.py
py_transmuter/models/: __init__.py  aggregator.py  mapper.py  types.py  utils.py
py_transmuter/pydantic/: aggregator.py  mapper.py
py_transmuter/pydantic_mapping/: __init__.py  aggregator.py  mapper.py  utils.py
src/: __init__.py  self_inspector.py
src/pydantic/: aggregator.py  mapper.py
test/dictionaries/: test_aggregator.py  test_mapper.py
test/dictionary_mapping/: test_aggregator.py  test_mapper.py
test/models/: test_aggregator.py  test_mapper.py
test/pydantic/: test_aggregator.py  test_mapper.py
test/pydantic_mapping/: test_aggregator.py
