[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-transmuter"
version = "0.1.1"
authors = [
    {name="Rodrigo De Rosa", email="rodrigoderosa15@gmail.com"},
]
description = "A library that facilitates mapping and aggregating objects from one model to another"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pydantic :: 2",
]
dependencies = [
    "pydantic==2.5.3",
]

[project.urls]
Homepage = "https://github.com/RodrigoDeRosa/py-transmuter"
Issues = "https://github.com/RodrigoDeRosa/py-transmuter/issues"